footer & overlay scrollbar issues resolved

--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -157,7 +157,8 @@ hr{
 
     .links-item {
         a {
-            font-family: Intro-Book;
+            color: #fff;
+            font-family: 'Intro-Book';
             font-weight: normal;
             font-style: normal;
             font-stretch: normal;
@@ -174,9 +175,6 @@ hr{
     }
     .fs-14 {
         font-size: 14px;
-    }
-    .white {
-        color: #ffffff;
     }
     .first {
         :not(:last-child) {
