--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -691,6 +691,10 @@ ngb-datepicker{
 
 @media screen and (max-width: 769px){
 
+    body{
+        padding-right: 0 !important;
+    }
+
     .header-for-profile{
             width: 90%;
         }
